samples/observability/z_archived-samples/uc_ballerina_restful/ballerina_restful_svc_istio_injected.yaml
apiVersion: v1
kind: Service
metadata:
  name: ballerina-restful-svc
  labels:
    app: ballerina-restful-svc
spec:
  type: NodePort
  ports:
  - port: 9090
    name: http
  selector:
    app: ballerina-restful-svc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: ballerina-restful-svc-v1
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"77fb517dd12bd096837d43f4cd0987ecac794c4de4b46cf7df64d1fe96425001","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: ballerina-restful-svc
        version: v1
    spec:
      containers:
      - image: kasunindrasiri/ballerina-helloworld
        imagePullPolicy: Always
        name: ballerina-restful-svc
        ports:
        - containerPort: 9090
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - ballerina-restful-svc
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy:0.5.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ballerina-restful-svc
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /ballerina
        backend:
          serviceName: ballerina-restful-svc
          servicePort: 9090
---
